# IPL-points-tabel-web-scraping

./: IPL T20 points Tabel  IPL T20 points Tabel 2016  IPL T20 points Tabel 2022  IPLT20 points Tabel  LICENSE  README.md  app.py  iplt20-stats.html  main.py  pyproject.toml  replit.nix  scratchFile.py  web-scraping-iplt20.ipynb
